# linkml-integration

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: comparators.yaml  filters.yaml  manifest.yaml  modules.yaml  subsets.yaml
harness/: __init__.py  harness.py  run_log.py  runner.py
harness/support/: basic_comparators.py  dirutils.py  filters.py  model_types.py  test_id.py
harness_source/: harness.py  run_log.py  runner.py
harness_source/support/: basic_comparators.py  compare_rdf.py  dirutils.py
model/: integration.py  integration.yaml  load_test.py  test.py  test.yaml
model/doc/: Comparator.md  Filepath.md  Filter.md  Manifest.md  Module.md  Subset.md  TestEntry.md  TestSet.md  comparator__description.md  comparator__entry_point.md  comparator__name.md  filepath__is_directory.md  filepath__path.md  filter__description.md  filter__entry_point.md  filter__name.md  index.md  manifest__comparators.md  manifest__description.md  manifest__filters.md  manifest__modules.md  manifest__subsets.md  manifest__tests.md  module__comparator.md  module__description.md  module__entry_point.md  module__filter.md  module__name.md  module__skip.md  module__subsets.md  subset__description.md  subset__name.md  testEntry__description.md  testEntry__fail_text.md  testEntry__issues.md  testEntry__name.md  testEntry__parameters.md  testEntry__skip.md  (+6 more)
testing_source/: __init__.py  comparators.py  dumpers.py  generators.py  harness.py  loaders.py  modules.py  run_log.py  run_tests.py  subsets.py
tests/: __init__.py  test_test_harness.py  test_test_runner.py
(+41 files in other folders)
