[tool.poetry]
name = "linkml-integration"
version = "0.1.0"
description = ""
authors = ["hsolbrig <informatics@solbrigs.us>"]
readme = "README.md"
packages = [{include = "testing_source"}]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = { path = "submodules/linkml-runtime", develop = false}
linkml = { path = "submodules/linkml", develop = false}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

