[tool.poetry]
name = "linkml-integration"
version = "0.1.0"
description = "Integration and testing module for LinkML"
authors = ["hsolbrig <informatics@solbrigs.us>"]
readme = "README.md"
packages = [{include = "harness"}]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = { path = "submodules/linkml-runtime", develop = true}
linkml = { path = "submodules/linkml", develop = true}
coverage = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

